--- a/Python Fundamentals/Module_1_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_Practice_Python_Fundamentals.ipynb
@@ -26,46 +26,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the second character from planet_name: \"u\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "\n",
+    "print(planet_name[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the first character from planet_name: \"J\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "\n",
+    "print(planet_name[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J r\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the first and last characters from planet_name\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "\n",
+    "print(planet_name[0],planet_name[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using a negative index access and print the first character from planet_name: \"J\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "\n",
+    "print(planet_name[-7])"
    ]
   },
   {
@@ -81,35 +117,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nep\n",
+      "tune\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print planet_name sliced into the first 3 characters and remaining characters\n",
     "planet_name = \"Neptune\"\n",
-    "\n"
+    "\n",
+    "print(planet_name[:3])\n",
+    "print(planet_name[3:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pa twooes\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print 1st char and then every 3rd char of wise_words\n",
     "# use string slice with a step\n",
     "wise_words = 'Play it who opens'\n",
-    "\n"
+    "\n",
+    "print(wise_words[0::2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enutpeN\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print planet_name in reverse\n",
-    "\n"
+    "\n",
+    "print(planet_name[::-1])"
    ]
   },
   {
@@ -127,52 +192,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your favorite food: Chicken\n",
+      "C\n",
+      "h\n",
+      "i\n",
+      "c\n",
+      "k\n",
+      "e\n",
+      "n\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Get user input for 1 fav_food\n",
     "# [ ] iterate through letters in fav_food \n",
     "#    - print each letter on a new line\n",
     "\n",
     "\n",
-    "\n"
+    "\n",
+    "fav_food  = input(\"Enter your favorite food: \")\n",
+    "\n",
+    "for index in fav_food:\n",
+    "    print(index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good-code-is-commented-code\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] iterate work_tip string concatenate each letter to variable: new_string \n",
     "# [ ] concatenate the letter or a \"-\" instead of a space \" \"\n",
     "# tip: concatenate string example: word = word + \"a\"\n",
     "work_tip = \"Good code is commented code\"\n",
     "\n",
+    "new_string =  \"\"\n",
+    "\n",
+    "for letter in work_tip:\n",
+    "    if letter ==\" \":\n",
+    "        new_string += \"-\"\n",
+    "    \n",
+    "    else:\n",
+    "            new_string += letter\n",
+    "            \n",
+    "print(new_string)\n",
+    "    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "i\n",
+      "r\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Print the first 4 letters of name on new line\n",
     "name = \"Hiroto\"\n",
+    "\n",
+    "for letter in name[:4]:\n",
+    "    \n",
+    "    print(letter)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "o\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Print every other letter from 2nd to last letter of name \n",
     "name = \"Hiroto\"\n",
-    "\n"
+    "\n",
+    "for letter in name[1::2]:\n",
+    "    print(letter)"
    ]
   },
   {
@@ -195,12 +325,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your first name: Laquisha\n",
+      "?hsiuq?L\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create Mystery Name\n",
-    "\n"
+    "\n",
+    "first_name = input(\"Enter your first name: \")\n",
+    "new_name = \"\"\n",
+    "for letter in first_name[::-1]:\n",
+    "    if letter.lower() == \"e\":\n",
+    "        new_name += \"?\"\n",
+    "    elif letter.lower() == \"t\":\n",
+    "        new_name += \"?\"\n",
+    "    elif letter.lower() == \"a\":\n",
+    "        new_name += \"?\"\n",
+    "    else:\n",
+    "        new_name += letter\n",
+    "print(new_name)"
    ]
   },
   {
@@ -224,50 +375,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] find and display the length of the string: topic\n",
     "topic = \"len() returns the length of a string\"\n",
-    "\n"
+    "\n",
+    "print(len(topic))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the string is:  56\n",
+      "i\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use len() to find and display the mid_pt (middle) index (+/- 1) of the string: topic\n",
     "# note: index values are whole numbers\n",
     "topic = \"len() can take a sequence, like a string, as an argument\"\n",
-    "\n"
+    "\n",
+    "print(\"The length of the string is: \",len(topic))\n",
+    "\n",
+    "print(topic[int(len(topic)/2)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print index where first instance of the word  \"code\" starts using .find()\n",
     "work_tip = \"Good code is commented code\"\n",
-    "\n"
+    "\n",
+    "print(work_tip.find(\"code\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub string is:  \"commented code\"\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] search for \"code\" in code_tip using .find() \n",
     "# [ ] search substring with substring index start= 13,end = last char \n",
     "# [ ] save result in variable: code_index\n",
     "# [ ] display index of where \"code\" is found, or print \"not found\" if code_index == -1\n",
     "work_tip = \"Good code is commented code\"\n",
-    "\n"
+    "\n",
+    "code_index = index = work_tip.find(\"code\")\n",
+    "substring = work_tip[13:]\n",
+    "index = substring.find(\"code\")\n",
+    "print(\"sub string is: \",\"\\\"\" + substring + \"\\\"\")\n",
+    "if index != 0:\n",
+    "    print(index)\n",
+    "else:\n",
+    "    print(index)"
    ]
   },
   {
@@ -282,27 +480,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of 'w' is:  0\n",
+      "Number of 'o' is:  5\n",
+      "'code' is found  2 times\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] find and report (print) number of w's, o's + use of word \"code\"\n",
     "work_tip = \"Good code is commented code\"\n",
-    "\n"
+    "\n",
+    "countw = 0\n",
+    "counto = 0\n",
+    "for letter in work_tip:\n",
+    "    if letter.lower() == \"w\":\n",
+    "        countw += 1\n",
+    "    if letter.lower() == \"o\":\n",
+    "        counto += 1\n",
+    "print(\"Number of 'w' is: \",countw)\n",
+    "print(\"Number of 'o' is: \",counto)\n",
+    "index = work_tip.find(\"code\")\n",
+    "count = 0\n",
+    "while index != -1:\n",
+    "    count += 1\n",
+    "    index = work_tip.find(\"code\",index+1)\n",
+    "print(\"'code' is found \",count,\"times\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "code_tip: code a conditional decision like you would say it\n",
+      "6\n",
+      "'i' found at index:  11\n",
+      "'i' found at index:  13\n",
+      "'i' found at index:  22\n",
+      "'i' found at index:  24\n",
+      "'i' found at index:  29\n",
+      "'i' found at index:  47\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  count times letter \"i\" appears in code_tip string\n",
     "# [ ] find and display the index of all the letter i's in code_tip\n",
     "# Remember: if .find(\"i\") has No Match, -1 is returned\n",
     "code_tip = \"code a conditional decision like you would say it\"\n",
     "print (\"code_tip:\" , code_tip)\n",
-    "\n"
+    "\n",
+    "print(code_tip.count(\"i\"))\n",
+    "index = code_tip.find(\"i\")\n",
+    "if index == -1:\n",
+    "    print(index)\n",
+    "else:\n",
+    "    while index != -1:\n",
+    "        print(\"'i' found at index: \",index)\n",
+    "        index = code_tip.find(\"i\",index + 1)"
    ]
   },
   {
@@ -346,13 +592,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a one sentence quote, non-alpha: Wheresoever you go, go with all your heart\n",
+      "W\n",
+      "Wh\n",
+      "Whe\n",
+      "Wher\n",
+      "Where\n",
+      "Wheres\n",
+      "Whereso\n",
+      "Wheresoe\n",
+      "Wheresoev\n",
+      "Wheresoeve\n",
+      "Wheresoever\n",
+      "WHERESOEVER\n",
+      "y\n",
+      "yo\n",
+      "you\n",
+      "YOU\n",
+      "g\n",
+      "go\n",
+      "g\n",
+      "go\n",
+      "w\n",
+      "wi\n",
+      "wit\n",
+      "with\n",
+      "WITH\n",
+      "a\n",
+      "al\n",
+      "all\n",
+      "y\n",
+      "yo\n",
+      "you\n",
+      "your\n",
+      "YOUR\n",
+      "h\n",
+      "he\n",
+      "hea\n",
+      "hear\n",
+      "heart\n",
+      "HEART\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create words after \"G\"\n",
     "# sample quote \"Wheresoever you go, go with all your heart\" ~ Confucius (551 BC - 479 BC)\n",
-    "\n"
+    "\n",
+    "quote = input(\"Enter a one sentence quote, non-alpha: \") + \" \"\n",
+    "word = \"\"\n",
+    "for character in quote:\n",
+    "    if character.isalpha():\n",
+    "        word += character\n",
+    "        print(word)\n",
+    "    elif word.lower() >= \"h\":\n",
+    "        print(word.upper())\n",
+    "        word = \"\"\n",
+    "    else:\n",
+    "        word = \"\"\n",
+    "if word.lower() >= \"h\":\n",
+    "    print(word.upper())"
    ]
   },
   {
@@ -382,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
