--- a/Python Fundamentals/Module_1_1_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_1_Python_Fundamentals.ipynb
@@ -54,11 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A <-- first character at index 0\n",
+      "l\n",
+      "t\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - note the first element is always index = 0\n",
     "student_name = \"Alton\"\n",
@@ -71,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Winner! Name starts with J: Jin\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Jin\"\n",
@@ -87,9 +105,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-8c616a470dcf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# cannot index out of range\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mstudent_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Tobias\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstudent_name\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run ERROR example\n",
     "# cannot index out of range\n",
@@ -116,26 +146,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o b e\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign a string 5 or more letters long to the variable: street_name\n",
     "# [ ] print the 1st, 3rd and 5th characters\n",
     "\n",
-    "\n"
+    "street_name = \"Cobblewood Trail\"\n",
+    "print(street_name[1],street_name[3],street_name[5])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give your team name with second letter containing 1, o, or u:Giants\n",
+      "Giants contains an i!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create an input variable: team_name - ask that second letter = \"i\", \"o\", or \"u\"\n",
     "# [ ] Test if team_name 2nd character = \"i\", \"o\", or \"u\" and print a message\n",
     "# note: use if, elif and else\n",
-    "\n"
+    "\n",
+    "team_name = input(\"Give your team name with second letter containing 1, o, or u:\")\n",
+    "\n",
+    "if team_name[1] == \"i\":\n",
+    "    print(team_name, \"contains an i!\")\n",
+    "    \n",
+    "elif team_name[1] == \"o\":\n",
+    "    print(team_name, \"contains an o!\")\n",
+    "    \n",
+    "elif team_name[1] == \"u\":\n",
+    "    print(team_name, \"contains a u!\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"This is not a winning team!\")"
    ]
   },
   {
@@ -179,9 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joana ends with 'a'\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Joana\"\n",
@@ -193,9 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joana has 2nd to last letter of 'n'\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# get second to last letter\n",
@@ -205,9 +282,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "for Joana\n",
+      "index 3 = 'n'\n",
+      "index -2 = 'n'\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# you can get to the same letter with index counting + or -\n",
@@ -228,25 +315,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a i l\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign a string 5 or more letters long to the variable: street_name\n",
     "# [ ] print the last 3 characters of street_name\n",
-    "\n"
+    "\n",
+    "street_name = \"Cobblewood Trail\"\n",
+    "print(street_name[-3],street_name[-2],street_name[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L a\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and assign string variable: first_name\n",
     "\n",
     "# [ ] print the first and last letters of name\n",
-    "\n"
+    "\n",
+    "first_name = \"Laquisha\"\n",
+    "print(first_name[0],first_name[-1])"
    ]
   },
   {
@@ -262,14 +369,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review, Run, Fix the error using string index\n",
     "shoe = \"tennis\"\n",
     "# print the last letter\n",
-    "print(shoe(-1))\n",
+    "print(shoe[-1])\n",
     "\n"
    ]
   },
@@ -298,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
