--- a/Python Fundamentals/Module_1_2_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_2_Python_Fundamentals.ipynb
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slice student_name[2:5]: let\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# assign string to student_name\n",
@@ -64,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 2, 3 & 4 of student_name: let\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# assign string to student_name\n",
@@ -78,9 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knowledge\n",
+      "knowledge is the 3rd char through the 11th char\n",
+      "knowledge is the index 2, \"k\", through index 10, \"e\"\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "long_word = 'Acknowledgement'\n",
@@ -104,25 +130,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "act tic\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] slice long_word to print \"act\" and to print \"tic\"\n",
     "long_word = \"characteristics\"\n",
     "\n",
-    "\n"
+    "\n",
+    "print(long_word[4:7],long_word[11:14])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] slice long_word to print \"sequence\"\n",
     "long_word = \"Consequences\"\n",
-    "\n"
+    "\n",
+    "print(long_word[3:11])"
    ]
   },
   {
@@ -154,9 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Col\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Colette\"\n",
@@ -176,14 +228,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conseq\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the first half of the long_word\n",
     "long_word = \"Consequences\"\n",
     "\n",
-    "\n"
+    "\n",
+    "print(long_word[:6])"
    ]
   },
   {
@@ -215,9 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ette'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Colette\"\n",
@@ -237,13 +309,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uences\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the second half of the long_word\n",
     "long_word = \"Consequences\"\n",
-    "\n"
+    "\n",
+    "print(long_word[6:])"
    ]
   },
   {
@@ -276,9 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colette\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Colette\"\n",
@@ -288,9 +377,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clte\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Colette\"\n",
@@ -300,9 +397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oet\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Colette\"\n",
@@ -312,9 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "osqe\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "long_word = \"Consequences\"\n",
@@ -334,20 +447,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Akoldeet\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the 1st and every 3rd letter of long_word\n",
     "long_word = \"Acknowledgement\"\n",
-    "\n"
+    "\n",
+    "print(long_word[0::2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "koldeet\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print every other character of long_word starting at the 3rd character\n",
     "long_word = \"Acknowledgement\"\n",
@@ -381,11 +511,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scitsiretcarahc\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example of stepping backwards using [::-1]\n",
     "long_word = \"characteristics\"\n",
@@ -395,9 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tcarahc\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example of stepping backwards using [6::-1]\n",
     "long_word = \"characteristics\"\n",
@@ -418,24 +564,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "desserts\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] reverse long_word\n",
     "long_word = \"stressed\"\n",
-    "\n"
+    "\n",
+    "print(long_word[::-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arahc\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the first 5 letters of long_word in reverse\n",
     "long_word = \"characteristics\"\n",
-    "\n"
+    "\n",
+    "print(long_word[4::-1])"
    ]
   },
   {
@@ -451,16 +615,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time\n",
+      "emit\n",
+      "enil\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the first 4 letters of long_word\n",
     "# [ ] print the first 4 letters of long_word in reverse\n",
     "# [ ] print the last 4 letters of long_word in reverse\n",
     "# [ ] print the letters spanning indexes 3 to 6 of long_word in Reverse\n",
     "long_word = \"timeline\"\n",
-    "\n"
+    "\n",
+    "print(long_word[0:4])\n",
+    "print(long_word[3::-1])\n",
+    "print(long_word[:-5:-1])\n",
+    "print(long_word[4:7:-1])\n",
+    "long_word = \"timeline\""
    ]
   },
   {
@@ -488,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
