--- a/Python Fundamentals/Module_1_3_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_3_Python_Fundamentals.ipynb
@@ -51,11 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "word = \"cello\"\n",
@@ -66,11 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "r\n",
+      "u\n",
+      "m\n",
+      "p\n",
+      "e\n",
+      "t\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# note: the variable 'letter' changed to 'item'\n",
@@ -82,11 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "i\n",
+      "a\n",
+      "n\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# note: variable is now 'xyz' \n",
@@ -99,11 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skye to SkYe\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# creates a new string (new_name) adding a letter (ltr) each loop\n",
@@ -134,18 +172,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first name: Laquisha\n",
+      "L\n",
+      "a\n",
+      "q\n",
+      "u\n",
+      "i\n",
+      "s\n",
+      "h\n",
+      "a\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Get user input for first_name\n",
     "# [ ] iterate through letters in first_name \n",
     "#    - print each letter on a new line\n",
     "\n",
     "\n",
-    "\n"
+    "first_name = input(\"Enter first name: \")\n",
+    "\n",
+    "for letter in first_name:\n",
+    "    \n",
+    "    print(letter)\n"
    ]
   },
   {
@@ -166,14 +222,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first name: Laquisha\n",
+      "Laquisha to: \n",
+      "L\n",
+      "a\n",
+      "q\n",
+      "u\n",
+      "I\n",
+      "s\n",
+      "h\n",
+      "a\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create capitalize-io\n",
-    "\n"
+    "\n",
+    "first_name = input(\"Enter first name: \")\n",
+    "new_name = \"\"\n",
+    "\n",
+    "for letter in first_name:\n",
+    "    \n",
+    "    if letter.lower() == \"i\":\n",
+    "        new_name += letter.capitalize() + \"\\n\"\n",
+    "        \n",
+    "    elif letter.lower() == \"o\":\n",
+    "        new_name += letter.capitalize() + \"\\n\"\n",
+    "        \n",
+    "    else:\n",
+    "        new_name += letter + \"\\n\"\n",
+    "        \n",
+    "print(first_name, \"to:\", '\\n'+new_name)"
    ]
   },
   {
@@ -206,11 +293,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "k\n",
+      "y\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Skye\"\n",
@@ -221,11 +316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y\n",
+      "k\n",
+      "S\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate BACKWARDS\n",
     "# [ ] review and run example\n",
@@ -249,30 +352,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "j\n",
+      "x\n",
+      "a\n",
+      "o\n",
+      "i\n",
+      "i\n",
+      "n\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create & print a variable, other_word, made of every other letter in long_word\n",
     "long_word = \"juxtaposition\"\n",
-    "\n"
+    "\n",
+    "long_word = \"juxtaposition\"\n",
+    "other_word = \"\"\n",
+    "for letter in long_word[::2]:\n",
+    "    other_word += letter + \"\\n\"\n",
+    "print(other_word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your favorite color: Blue\n",
+      "eulB Blue\n"
+     ]
+    }
+   ],
    "source": [
     "# Mirror Color\n",
     "# [ ] get user input, fav_color\n",
     "# [ ] print fav_color backwards + fav_color\n",
     "# example: \"Red\" prints \"deRRed\"\n",
-    "\n"
+    "\n",
+    "fav_color = input(\"Enter your favorite color: \")\n",
+    "print(fav_color[::-1]+\" \"+fav_color)"
    ]
   },
   {
@@ -300,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
