--- a/Python Fundamentals/Module_1_4_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_4_Python_Fundamentals.ipynb
@@ -68,9 +68,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of characters in string\n",
+      "14 \n",
+      "\n",
+      "letter \"e\" occurrences\n",
+      "2 \n",
+      "\n",
+      "find the index of the first space\n",
+      "4 \n",
+      "\n",
+      "find the index of \"u\" searching a slice work_tip[3:9] - e your\n",
+      "7 \n",
+      "\n",
+      "find the index of \"e\" searching a slice work_tip[4:] -  your code\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "work_tip = \"save your code\"\n",
@@ -101,9 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentence: \"good code is commented code\" has character length =  27\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "work_tip = \"good code is commented code\"\n",
@@ -113,9 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good code is \n",
+      "commented code\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# find the middle index\n",
@@ -139,9 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good code is commented code\n",
+      "how many w's?  0\n",
+      "how many o's?  5\n",
+      "uses 'code', how many times?  2\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(work_tip)\n",
@@ -152,9 +201,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good code is \n",
+      "# o's in first half\n",
+      "3\n",
+      "\n",
+      "commented code\n",
+      "# o's in second half\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example \n",
     "print(work_tip[:mid_pt])\n",
@@ -180,9 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good code has meaningful variable names\n",
+      "5 = starting index for \"code\"\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example \n",
     "work_tip = \"good code has meaningful variable names\"\n",
@@ -194,9 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "search for \"meaning\" in the sub-string:  meaningful variable \n",
+      "\n",
+      "\"meaning\" found in work_tip[13:33] sub-string search at index 14\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example \n",
     "# set start index = 13 and end index = 33\n",
@@ -207,9 +289,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "work_tip: good code has meaningful variable names\n",
+      "'o' at index = 1\n",
+      "'o' at index = 2\n",
+      "'o' at index = 6\n",
+      "no more o's\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example \n",
     "# if .find(\"o\") has No Match, -1 is returned\n",
@@ -238,15 +332,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The midpoint is: 12 \n",
+      "\n",
+      "wear a hat \n",
+      "when it rains\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use len() to find the midpoint of the string \n",
     "# [ ] print the halves on separate lines\n",
     "random_tip = \"wear a hat when it rains\"\n",
     "\n",
-    "\n"
+    "midpoint = int(len(random_tip)/2)\n",
+    "print(\"The midpoint is:\", midpoint,\"\\n\")\n",
+    "print(random_tip[:midpoint-1])\n",
+    "print(random_tip[midpoint-1:])\n"
    ]
   },
   {
@@ -261,16 +369,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of letter \"e\": 2\n",
+      "Number of letter \"a\": 4\n",
+      "The most frequent letter is \"a\" with: 4\n"
+     ]
+    }
+   ],
    "source": [
     "# for letters: \"e\" and \"a\" in random_tip\n",
     "# [ ] print letter counts \n",
     "# [ ] BONUS: print which letter is most frequent\n",
     "random_tip = \"wear a hat when it rains\"\n",
     "\n",
-    "\n"
+    "print(\"Number of letter \\\"e\\\":\", random_tip.count(\"e\"))\n",
+    "\n",
+    "print(\"Number of letter \\\"a\\\":\", random_tip.count(\"a\"))\n",
+    "\n",
+    "if random_tip.count(\"e\")>random_tip.count(\"a\"):\n",
+    "    \n",
+    "    print(\"The most frequent letter is \\\"e\\\" with:\", random_tip.count(\"e\"))\n",
+    "    \n",
+    "elif random_tip.count(\"e\")<random_tip.count(\"a\"):\n",
+    "    \n",
+    "    print(\"The most frequent letter is \\\"a\\\" with:\", random_tip.count(\"a\"))\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Sorry you got rained on!\")\n"
    ]
   },
   {
@@ -286,13 +417,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aposi\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print long_word from the location of the first and second \"t\"\n",
     "long_word = \"juxtaposition\"\n",
-    "\n"
+    "\n",
+    "location = long_word.find(\"t\")\n",
+    "\n",
+    "print(long_word[location+1:long_word.find(\"t\",long_word.find(\"t\",location+1))])"
    ]
   },
   {
@@ -323,13 +465,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "they \n",
+      "\n",
+      "stumble \n",
+      "\n",
+      "who \n",
+      "\n",
+      "run \n",
+      "\n",
+      "fast\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Print each word in the quote on a new line  \n",
     "quote = \"they stumble who run fast\"\n",
-    "\n"
+    "\n",
+    "start = 0\n",
+    "\n",
+    "space_index = quote.find(\" \")\n",
+    "\n",
+    "while space_index >= 0:\n",
+    "    \n",
+    "    if quote[-1] == \" \":\n",
+    "        word = quote[start:space_index]\n",
+    "        \n",
+    "        print(word,\"\\n\")\n",
+    "        start = space_index+1\n",
+    "        space_index = quote.find(\" \",start+1)\n",
+    "        \n",
+    "    else:\n",
+    "        word = quote[start:space_index]\n",
+    "        \n",
+    "        print(word,\"\\n\")\n",
+    "        \n",
+    "        start = space_index+1\n",
+    "        space_index = quote.find(\" \",start+1)\n",
+    "        \n",
+    "        if space_index == -1:\n",
+    "            \n",
+    "            print(quote[start:len(quote)])\n",
+    "    \n"
    ]
   },
   {
@@ -357,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
